--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,41 @@ body {
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+}
+
+.navbar {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: inherit;
+    box-shadow: 0 0 10px rgb(0 0 0 / 20%);
+    margin: 20px 10px;
+    position: relative;
+    z-index: 1;
+    background: rgba(255, 255, 255, 0.5);
+}
+
+.language-select {
+    background-color: #12cad6;
+    border: none;
+    border-radius: 5px;
+    font-size: 1.2rem;
+    font-weight: 100;
+    margin: 20px 20px;
+    color: #fff;
+    padding: 10px;
+    cursor: pointer;
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+}
+
+
+.language-select:focus {
+    outline: none;
 }
 
 .card {
@@ -97,12 +131,14 @@ body {
 }
 
 .search-btn:hover {
-    background-color: #164043;
+    background-color: #24969f;
     transition: 0.4s;
 }
 
 .search-btn:disabled {
     background-color: #ccc;
+    color: #fff;
+    cursor: not-allowed;
 }
 
 .recipe {
@@ -114,6 +150,17 @@ body {
     resize: none;
     height: 280px;
 
+}
+
+.status {
+    font-size: 1.2rem;
+    font-weight: 100;
+    margin: 20px 20px;
+    color: #164043;
+}
+
+.error {
+    color: red;
 }
 
 ::-webkit-scrollbar {
