--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@ body {
     left: 0px;
     bottom: 0px;
     right: 0px;
-    background-image: url('../public/back-image.jpeg');
+    background-image: url('../public/back-image.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center top;
